--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
       </select>
 
-      <button id="resultButton">Result</button>
+      <button id="resultButton"
+      onclick="calculateResult()"
+      >Result</button>
 
       <p id="display"></p>
  
